Remove all bug reports from Findbugs.